--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,32 @@
     <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
-    <nav class="navbar">
-      </nav>
+    <nav class="navbar"></nav>
 
-      <header class="hero-section">
-        <div class="content">
-            <img src="img/light-logo.png" class=" logo" alt="logo">
-          <p class="sub-heading">best fashion collection of all time</p>
+    <header class="hero-section">
+      <div class="content">
+        <img src="img/light-logo.png" class="logo" alt="logo" />
+        <p class="sub-heading">best fashion collection of all time</p>
+      </div>
+    </header>
+    <section class="product">
+      <h2 class="product-category">best selling</h2>
+      <div class="product-container">
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span
+            ><img src="img/card1.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to wishlist</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">a short line...</p>
+            <span class="price">$20</span>
+            <span class="actual-price">$40</span>
+          </div>
         </div>
-      </header>
+      </div>
+    </section>
     <script src="js/nav.js"></script>
   </body>
 </html>
